# xorq-template-cached-fetcher

./: .envrc  README.md  expr.py  pyproject.toml  requirements.txt  with-uvenv
src/xorq_template_cached_fetcher/: __init__.py
