[project]
name = "xorq-template-cached-fetcher"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=45.0.5",
    "xorq>=0.2.4",
    "xorq-hash-cache>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
]
